# SmartRAG

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/smartrag/: __init__.py  cli.py  config.py
src/smartrag/chunk/: __init__.py
src/smartrag/inference/: __init__.py  _openai_compat.py  base.py  factory.py  huggingface.py  nvidia.py  ollama.py
src/smartrag/inventory/: __init__.py
src/smartrag/normalize/: __init__.py
src/smartrag/ocr/: __init__.py  base.py  factory.py  glm_ocr_ollama.py
src/smartrag/parse/: __init__.py
src/smartrag/pipeline/: __init__.py
src/smartrag/schemas/: __init__.py  chunks.py  elements.py  inventory.py
src/smartrag/triage/: __init__.py
tests/: test_config.py  test_inference.py  test_ocr.py  test_schemas.py
