[project]
name = "smartrag"
version = "0.1.0"
description = "Document processing pipeline that turns large PDFs and Word docs into chunk-ready, structured, RAG-ready output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kunal Rustagi" }]
dependencies = [
    # Layout / parsing
    "docling>=2.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    # Schemas / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Inference transport / backends
    "httpx>=0.27",
    "huggingface-hub>=0.24",
    "tokenizers>=0.19",
    "tenacity>=8.4",
    # CLI / logging
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.scripts]
smartrag = "smartrag.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartrag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
files = ["src"]
